[gd_scene load_steps=4 format=3 uid="uid://dc1v24xkjjbex"]

[ext_resource type="Script" uid="uid://bflmfgmeulp2e" path="res://addons/inventory_system/demo/demo_with_hotbar.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dylkpea7x0fj6" path="res://addons/inventory_system/scenes/inventory_ui.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://dxeyi01lth3tr" path="res://addons/inventory_system/scenes/hotbar_ui.tscn" id="3"]

[node name="DemoHotbar" type="Node2D"]
script = ExtResource("1")

[node name="InventoryUI" parent="." instance=ExtResource("2")]
offset_left = 579.0
offset_top = 296.0
offset_right = 579.0
offset_bottom = 296.0

[node name="HotbarUI" parent="." instance=ExtResource("3")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 234.0
offset_top = 505.0
offset_right = 618.0
offset_bottom = 585.0
grow_horizontal = 1
grow_vertical = 1

[node name="InfoLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 600.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(0.2, 1, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 20
text = "Presiona 1-9 para seleccionar slot"

[node name="SelectedLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 520.0
offset_right = 400.0
offset_bottom = 545.0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "Seleccionado: (ninguno)"

[node name="Instructions" type="Label" parent="."]
offset_left = 20.0
offset_top = 70.0
offset_right = 600.0
offset_bottom = 250.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "CONTROLES:

ESC: Abrir/Cerrar inventario completo
1-9: Seleccionar slot del hotbar
Scroll: Cambiar slot del hotbar
Enter/Espacio: Usar item seleccionado
Click Izquierdo (slot): Usar item
Click Derecho (slot): Usar item

HOTBAR:
- Los primeros 9 slots del inventario
- Selección visible con borde amarillo
- Número de tecla en cada slot"
